# ProjetoJogo2026-1

./: .gitignore  CMakeLists.txt  readme.txt
SFML-2.6.2-sources/SFML-2.6.2/: CMakeLists.txt
assets/: desktop.ini
diagramas/: Diagrama Projeto Jogo v1.0.mdj
include/: besouro.h  bigchief.h  cactopulante.h  chao.h  cogumelopulante.h  ente.h  entidade.h  fase.h  fase1.h  fase2.h  gerenciadorDeArquivos.h  gerenciadorDeColisoes.h  gerenciadorDeEventos.h  gerenciadorgrafico.h  inimigo.h  inimigoeasy.h  inimigomedio.h  jogador.h  jogo.h  lamalento.h  lista.h  listaentidades.h  menu.h  menuRanking.h  menufase.h  menunome.h  menuprincipal.h  observador.h  obstaculo.h  obstdificil.h  obstmedio.h  personagem.h  plataforma.h  projetil.h  reibesouro.h  vespa.h
src/: JOGO.cpp  besouro.cpp  bigchief.cpp  cactopulante.cpp  chao.cpp  cogumelopulante.cpp  ente.cpp  entidade.cpp  fase.cpp  fase1.cpp  fase2.cpp  gerenciadorDeAquivos.cpp  gerenciadorDeColisoes.cpp  gerenciadorDeEventos.cpp  gerenciadorgrafico.cpp  inimigo.cpp  inimigoeasy.cpp  inimigomedio.cpp  jogador.cpp  lamalento.cpp  listaentidades.cpp  main.cpp  menu.cpp  menuRanking.cpp  menufase.cpp  menunome.cpp  menuprincipal.cpp  obstaculo.cpp  obstdificil.cpp  obstmedio.cpp  personagem.cpp  plataforma.cpp  projetil.cpp  reibesouro.cpp  vespa.cpp
